# bf_AWS_rights

./: AWS_profile.py  README.md  main.py  pyproject.toml  settings.py
libs/: Services.py
meta_aws/: iam.py  meta_aws.py  sts.py
tests/: test_meta_aws.py
